tests/NormalTests/paczka1/fuzzy1/79557929.err
Error in line 2: NR0Wk S837 12,7
Error in line 8: NR0Wk A896 70,76
Error in line 6: NR0Wk S47 12,6
Error in line 25: M4SLULmB6 A896 47,1
Error in line 24: NR0Wk A896 216,7
Error in line 21: A975 A975 11,5
